--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "chart.js": "^2.9.4",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
