--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "chart.js": "^2.9.4",
+    "material-ui": "^0.20.2",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
