--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chartjs": "^0.3.24",
     "material-ui": "^0.20.2",
     "next": "13.3.0",
+    "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1"
