--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "react-interaction-hooks": "^1.4.1"
   },
   "devDependencies": {
     "eslint": "8.38.0",
